[project]
name = "ex1"
version = "0.1.0"
description = "Loading Programs"
authors = [{ name = "amansir", email = "amansir@student.1337.ma" }]

requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26",
    "matplotlib>=3.7.2",
    "requests>=2.31.0",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"